--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "html-react-parser": "^1.2.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-intl": "^5.15.7",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
