--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
     "html-react-parser": "^1.2.4",
     "react": "^17.0.2",
