--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-twitter-embed": "3.0.3",
     "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^1.1.1"
   },
