--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@master
 
     - name: Build the Docker image
-      run: docker build --tag ghcr.io/eol-uchile/portal-eol:${GITHUB_SHA}
+      run: docker build . --tag ghcr.io/eol-uchile/portal-eol:${GITHUB_SHA}
 
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
