--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portal-eol",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
@@ -16,8 +16,8 @@
     "react-intl": "^5.15.7",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.0",
-    "react-twitter-embed": "3.0.3",
+    "react-scripts": "^5.0.1",
+    "react-twitter-embed": "4.0.4",
     "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^1.1.1"
   },
