--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - name: Trigger second repository
         run: |
-          curl -XPOST -u "eolito:${{secrets.WEBHOOK_SECRET}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/eol-uchile/argocd-config/dispatches --data '{"event_type": "update-images", "client_payload": {"type": "portal"}}'
+          curl -XPOST -u "eolito:${{secrets.WEBHOOK_SECRET}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/eol-uchile/argocd-config/dispatches --data '{"event_type": "update-portal", "client_payload": {"type": "portal"}}'
