--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "portal-eol",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "ajv": "^8.12.0",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
     "html-react-parser": "^1.2.4",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-countup": "^4.3.3",
@@ -17,8 +20,9 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
-    "react-twitter-embed": "4.0.4",
+    "react-twitter-embed": "^4.0.4",
     "react-visibility-sensor": "^5.1.1",
+    "typescript": "^2.9.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
