--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,28 +2,29 @@ name: Docker Image CI
 
 on:
   push:
-    branches:
-      - staging
-      - trying
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
 
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v4
 
     - name: Build the Docker image
       run: docker build . --tag ghcr.io/eol-uchile/portal-eol:${GITHUB_SHA}
 
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
+      if: ${{ github.ref == 'ref/heads/master' }}
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: eolito
-        password: ${{ secrets.CR_PAT }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Push to Github Container Registry
+      if: ${{ github.ref == 'ref/heads/master' }}
       run: |
         docker push ghcr.io/eol-uchile/portal-eol:${GITHUB_SHA}
 
