--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,7 +16,7 @@ jobs:
       run: docker build . --tag ghcr.io/eol-uchile/portal-eol:${GITHUB_SHA}
 
     - name: Login to GitHub Container Registry
-      if: ${{ github.ref == 'ref/heads/master' }}
+      if: ${{ github.ref == 'refs/heads/master' }}
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
@@ -24,7 +24,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Push to Github Container Registry
-      if: ${{ github.ref == 'ref/heads/master' }}
+      if: ${{ github.ref == 'refs/heads/master' }}
       run: |
         docker push ghcr.io/eol-uchile/portal-eol:${GITHUB_SHA}
 
