fix(ci): conditionates webhook to image build

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -28,3 +28,8 @@ jobs:
       run: |
         docker push ghcr.io/eol-uchile/portal-eol:${GITHUB_SHA}
 
+  webhook:
+    needs: [ build ]
+    if: ${{ github.ref == 'refs/heads/master' }}
+    uses: ./.github/workflows/webhook.yml
+    secrets: inherit
