--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -1,12 +1,15 @@
 name: Webhook Update Image
 
 on:
-  push:
-    branches:
-      - master
+  workflow_call:
+    secrets:
+      WEBHOOK_SECRET:
+        required: true
+  repository_dispatch:
+    types: [debug-webhook]
 
 jobs:
-  build:
+  webhook:
     runs-on: ubuntu-latest
 
     steps:
