--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,19 @@
 name: Docker Image CI
 
 on:
-  push:
+  merge_group:
+    types: [checks_requested]
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+    branches:
+      - master
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -16,7 +28,7 @@ jobs:
       run: docker build . --tag ghcr.io/eol-uchile/portal-eol:${GITHUB_SHA}
 
     - name: Login to GitHub Container Registry
-      if: ${{ github.ref == 'refs/heads/master' }}
+      if: ${{ github.event_name == 'merge_group' }}
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
@@ -24,12 +36,12 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Push to Github Container Registry
-      if: ${{ github.ref == 'refs/heads/master' }}
+      if: ${{ github.event_name == 'merge_group' }}
       run: |
         docker push ghcr.io/eol-uchile/portal-eol:${GITHUB_SHA}
 
   webhook:
     needs: [ build ]
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.event_name == 'merge_group' }}
     uses: ./.github/workflows/webhook.yml
     secrets: inherit
