--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -1,4 +1,4 @@
-name: Webhook Update Image
+name: Webhook Update Portal-EOL Image
 
 on:
   workflow_call:
@@ -11,7 +11,7 @@ on:
 jobs:
   webhook:
     runs-on: ubuntu-latest
-
+    if: ${{ github.event_name }} == 'workflow_call' || ${{ github.event.client_payload.debug }}
     steps:
       - name: Trigger second repository
         run: |
